k8s/dynamodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-local
  namespace: documents
spec:
  selector:
    app: dynamodb-local
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb-local
  namespace: documents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb-local
  template:
    metadata:
      labels:
        app: dynamodb-local
    spec:
      containers:
        - name: dynamodb-local
          image: amazon/dynamodb-local:latest
          args: ["-jar","DynamoDBLocal.jar","-inMemory","-sharedDb"]
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
